# Space-Invaders-3D-vibecoded

./: CLAUDE.md  Cargo.toml  README.md  Trunk.toml  index.html
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: deploy.yml  release.yml
assets/shaders/: crt.wgsl
src/: barrier.rs  bullet.rs  collision.rs  components.rs  crt.rs  effects.rs  enemy.rs  main.rs  music.rs  mystery.rs  player.rs  scoreboard.rs  sound.rs
