[package]
name = "invaders_3d"
version = "0.1.0"
edition = "2024"

[features]
# Enable WebGL2 rendering backend (required for web builds via trunk).
# Usage: trunk build --features webgl2
webgl2 = ["bevy/webgl2"]

[dependencies]
bevy = { version = "0.18", features = ["3d"] }
rand = "0.8"

# On WASM, getrandom must use the Web Crypto API (js feature) so that
# rand::thread_rng() works in the browser.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
